<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gmps_localizer_package</name>
  <version>2.3.0</version>
  <description>gmps_localizer_package</description>
  <maintainer email="h-mukumoto@he.aichi-steel.co.jp">h-mukumoto</maintainer>
  <maintainer email="k-urakawa@he.aichi-steel.co.jp">k-urakawa</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>gmps_msgs_package</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
